# io-service-task

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
modules/: CMakeLists.txt
src/: CMakeLists.txt  callstack.hpp  interrupt_flag.cpp  interrupt_flag.hpp  invocable.hpp  io_service.cpp  io_service.hpp  monitor.hpp  strand.hpp  thread_data_mngr.hpp  thread_manager.cpp  thread_manager.hpp  threadsafe_queue.hpp
src/async/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  async_connect.hpp  async_result.hpp  async_task.hpp  base_async.hpp  buffer.hpp  endpoint.hpp  generic_async.hpp  resolver.cpp  resolver.hpp  socket.cpp  socket.hpp  uring.cpp  uring.hpp  uring_async.cpp  uring_async.hpp  uring_error.hpp
src/async/detail/: CMakeLists.txt  scoped_uring.cpp  scoped_uring.hpp  uring_storage.hpp
src/async/impl/: uring.ipp
src/common/: CMakeLists.txt  false_func.hpp  helgrind_annotations.hpp  io_service_err.hpp  logger.cpp  logger.hpp
src/util/: CMakeLists.txt
src/util/checked_delete/: CMakeLists.txt  checked_delete.hpp
src/util/shared_ptr/: CMakeLists.txt  shared_ptr.h
test/: CMakeLists.txt  interrupt_flag_test.cpp  invocable_test.cpp  io_service_test.cpp  monitor_test.cpp  strand_test.cpp  thread_manager_test.cpp  threadsafe_queue_test.cpp
test/apps/: CMakeLists.txt  connector.cpp  one_shot_connect.c
test/async/: CMakeLists.txt  async_task_test.cpp  uring_test.cpp
test/one_shot_connect/: one_shot_connect.c
test/unit/: CMakeLists.txt  callstack_test.cpp  invocable_test.cpp  io_service_test.cpp
test/unit/async/: CMakeLists.txt  async_task_test.cpp  uring_test.cpp
