set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(shared_ptr)
add_subdirectory(checked_delete)

add_library(io_service_util_impl INTERFACE)

# target_include_directories(io_service_util_impl INTERFACE .)

target_link_libraries(io_service_util_impl INTERFACE io_service_shared_ptr_impl io_service_checked_delete_impl)